[tool.poetry]
name = "Datamint-MedSAM2"
version = "0.1.0"
description = "A library for dealing with fine-tuned SAM-2 models"
authors = ["Sonance Team"]
packages = [{ include = "sam2_adapter" }]
# license = "Proprietary" # https://python-poetry.org/docs/pyproject/

# https://python-poetry.org/docs/dependency-specification/
[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydicom = "*"
nibabel = "*"
opencv-python = "*"
SimpleITK = "*"
torchmetrics = "*"
lightning = { extras = ["extra"], version = "*" }
SAM-2 = { git = "https://github.com/facebookresearch/segment-anything-2.git" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
